--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,27 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  @apply bg-unique-gold-900
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */;
+}
+
+.flex-center-center {
+  @apply flex justify-center items-center;
+}
+
+.error-text {
+  @apply text-xsm text-error;
+}
+
+.error-bullet {
+  @apply text-xsm text-error;
+}
+
+.field-outline {
+  @apply outline-none focus-visible:outline-[3px] focus-visible:outline-offset-0 focus-visible:!outline-black;
 }
